--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,9 @@ jdbc.database.pool-provider=org.hibernate.hikaricp.internal.HikariCPConnectionPr
 jdbc.database.dataSourceClassName=org.postgresql.ds.PGPoolingDataSource
 jdbc.database.show-sql=false
 
+# Validation
+user.name.length.min = 3
+user.name.length.max = 15
+user.password.length.min = 5
+user.password.length.max = 15
+
