--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter')
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+//    implementation("org.springframework.security:spring-security-jwt")
 
     // Databases
     implementation('org.postgresql:postgresql:42.2.5')
@@ -74,6 +75,7 @@ dependencies {
     // Tools
     implementation('org.apache.commons:commons-lang3:3.0')
     implementation('commons-codec:commons-codec:1.11')
+    implementation("commons-validator:commons-validator:1.6")
 
     // Mapper
     implementation('org.mapstruct:mapstruct:1.2.0.Final')
