--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,9 @@ dependencies {
     implementation('org.postgresql:postgresql:42.2.5')
     implementation('org.hibernate:hibernate-hikaricp:5.3.7.Final')
 
+    // JWT
+    implementation('com.nimbusds:nimbus-jose-jwt:6.4.2')
+
     // Tools
     implementation('org.apache.commons:commons-lang3:3.0')
     implementation('commons-codec:commons-codec:1.11')
@@ -105,7 +108,7 @@ task integrationTest(type: Test) {
 
     testClassesDir = sourceSets.integrationTest.output.classesDir
     classpath = sourceSets.integrationTest.runtimeClasspath
-    
+
     // Integration test are always out of date, so they will alway run even if there are no changes
     outputs.upToDateWhen { false }
 
