--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ jdbc.database.password=postgres
 jdbc.database.driver-class-name=org.postgresql.Driver
 
 jdbc.database.hibernate-dialect=org.hibernate.dialect.PostgreSQL95Dialect
-jdbc.database.ddl-auto=create
+jdbc.database.ddl-auto=update
 
 jdbc.database.pool-provider=org.hibernate.hikaricp.internal.HikariCPConnectionProvider
 jdbc.database.dataSourceClassName=org.postgresql.ds.PGPoolingDataSource
