--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,6 @@ user.name.length.min = 3
 user.name.length.max = 15
 user.password.length.min = 5
 user.password.length.max = 15
+role.name.length.min = 6
+role.name.length.max = 20
 
