--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port = 8090
 
 # PostgreSQL
-jdbc.database.url=jdbc:postgresql://127.0.0.1:5432/customer
+jdbc.database.url=jdbc:postgresql://127.0.0.1:5432/userapi
 jdbc.database.username=postgres
 jdbc.database.password=postgres
 
